:lipstick: :bug: fix btn spacing

--- a/app/assets/stylesheets/materialize-fix.css.scss
+++ b/app/assets/stylesheets/materialize-fix.css.scss
@@ -10,6 +10,10 @@
     transform: translateY(50%);
 }
 
+.btn{
+  margin-right: 5px; // 8 - 3
+}
+
 .circle{
     margin-left: 0px !important;
 }
